--- a/plugin-btn-textutils/src/main/AndroidManifest.xml
+++ b/plugin-btn-textutils/src/main/AndroidManifest.xml
@@ -19,6 +19,19 @@
             </intent-filter>
         </activity>
 
+        <activity
+            android:name=".TextUtilsActivity"
+            android:excludeFromRecents="true"
+            android:noHistory="true"
+            android:launchMode="singleTask"
+            android:exported="true"
+            android:theme="@style/AppThemeTransparent">
+            <intent-filter>
+                <action android:name="org.eu.thedoc.zettelnotes.intent.buttons.textutils" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
     </application>
 
 </manifest>
