--- a/settings.gradle
+++ b/settings.gradle
@@ -3,3 +3,4 @@ include ':plugin-btn-location'
 include ':plugin-btn-smile'
 include ':plugin-btn-textutils'
 include ':plugin-btn-speech2text'
+include ':plugin-btn-translate'
