--- a/settings.gradle
+++ b/settings.gradle
@@ -4,3 +4,4 @@ include ':plugin-btn-smile'
 include ':plugin-btn-textutils'
 include ':plugin-btn-speech2text'
 include ':plugin-btn-translate'
+include ':plugin-btn-speedread'
