+ ZN Plugin Speed Read

--- a/plugin-btn-smile/src/main/AndroidManifest.xml
+++ b/plugin-btn-smile/src/main/AndroidManifest.xml
@@ -17,6 +17,10 @@
                 <action android:name="org.eu.thedoc.zettelnotes.intent.buttons" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
 
     </application>
