--- a/build.gradle
+++ b/build.gradle
@@ -70,6 +70,8 @@ subprojects {
         compileOptions {
             sourceCompatibility JavaVersion.VERSION_11
             targetCompatibility JavaVersion.VERSION_11
+
+            coreLibraryDesugaringEnabled true
         }
 
         testOptions {
