--- a/plugin-btn-speech2text/build.gradle
+++ b/plugin-btn-speech2text/build.gradle
@@ -6,4 +6,5 @@ android {
         versionCode versionMajor
         versionName "${versionMajor}"
     }
+    namespace 'org.eu.thedoc.zettelnotes.buttons.speech2text'
 }
