--- a/plugin-btn-textutils/build.gradle
+++ b/plugin-btn-textutils/build.gradle
@@ -6,6 +6,7 @@ android {
         versionCode versionMajor
         versionName "${versionMajor}"
     }
+    namespace 'org.eu.thedoc.zettelnotes.buttons.textutils'
 }
 
 dependencies {
