--- a/plugin-btn-textutils/src/main/AndroidManifest.xml
+++ b/plugin-btn-textutils/src/main/AndroidManifest.xml
@@ -2,16 +2,17 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application
-        android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/Theme.ZettelNotes" >
+       android:allowBackup="true"
+       android:icon="@mipmap/ic_launcher"
+       android:label="@string/app_name"
+       android:roundIcon="@mipmap/ic_launcher_round"
+       android:supportsRtl="true"
+       android:theme="@style/Theme.ZettelNotes">
 
-        <activity android:name=".LauncherActivity"
-            android:theme="@style/Theme.ZettelNotes"
-            android:exported="true">
+        <activity
+           android:name=".LauncherActivity"
+           android:theme="@style/Theme.ZettelNotes"
+           android:exported="true">
             <intent-filter>
                 <action android:name="org.eu.thedoc.zettelnotes.intent.buttons" />
                 <category android:name="android.intent.category.DEFAULT" />
@@ -19,15 +20,28 @@
         </activity>
 
         <activity
-            android:name=".TextUtilsActivity"
-            android:excludeFromRecents="true"
-            android:noHistory="true"
-            android:launchMode="singleTask"
-            android:exported="true"
-            android:theme="@style/AppThemeTransparent">
+           android:name=".TextUtilsActivity"
+           android:excludeFromRecents="true"
+           android:noHistory="true"
+           android:launchMode="singleTask"
+           android:exported="true"
+           android:theme="@style/AppThemeTransparent">
             <intent-filter>
                 <action android:name="org.eu.thedoc.zettelnotes.intent.buttons.textutils" />
                 <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
+        <activity
+           android:name=".ShareActivity"
+           android:excludeFromRecents="true"
+           android:exported="true"
+           android:label="@string/intent_share_text"
+           android:theme="@style/AppThemeTransparent">
+            <intent-filter>
+                <action android:name="android.intent.action.PROCESS_TEXT" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <data android:mimeType="text/plain" />
             </intent-filter>
         </activity>
 
