--- a/settings.gradle
+++ b/settings.gradle
@@ -23,3 +23,4 @@ include ':plugin-btn-textutils'
 include ':plugin-btn-speech2text'
 include ':plugin-btn-translate'
 include ':plugin-btn-speedread'
+include ':plugin-btn-chat-ai'
