--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,24 @@ project.ext {
 
 //shared config for modules
 subprojects {
+    //default values for subprojects
+    ext {
+        packageName = ''
+        versionMajor = 0
+    }
+
+
+    afterEvaluate {
+        android {
+            namespace "${project.packageName}"
+            defaultConfig {
+                applicationId "${project.packageName}"
+                versionCode project.versionMajor
+                versionName "${project.versionMajor}"
+            }
+        }
+    }
+
     apply plugin: 'com.android.application'
     dependencies {
         implementation libs.api
@@ -31,7 +49,7 @@ subprojects {
                 keyAlias PROP_KEY_ALIAS
                 storeFile project.keystore
                 storePassword PROP_STORE_PASSWORD
-                keyPassword PROP_KEY_PASSWORD
+                keyPassword PROP_STORE_PASSWORD
             }
         }
 
@@ -72,6 +90,6 @@ subprojects {
     }
 }
 
-task clean(type: Delete) {
-    delete rootProject.buildDir
+tasks.register('clean', Delete) {
+    delete buildDir
 }
