--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,6 +13,8 @@ mlkit-language-id = { module = "com.google.mlkit:language-id", version = "17.0.4
 junit-jupiter = { module = "org.junit.jupiter:junit-jupiter-engine", version = "5.9.2" }
 junit-vintge = { module = "org.junit.vintage:junit-vintage-engine", version = "5.9.2" }
 gms-location = { module = "com.google.android.gms:play-services-location", version = "21.0.1" }
+chat-gpt-api = { module = "com.cjcrafter:openai", version = "1.3.1" }
+ok-http = { module = "com.squareup.okhttp3:okhttp", version = "4.9.2" }
 
 [bundles]
 mlkit = ["mlkit-translate", "mlkit-language-id"]
