--- a/plugin-btn-chat-ai/src/main/AndroidManifest.xml
+++ b/plugin-btn-chat-ai/src/main/AndroidManifest.xml
@@ -28,6 +28,10 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+        <activity
+           android:name=".SettingsActivity"
+           android:parentActivityName=".ChatActivity"
+           android:exported="false" />
     </application>
 
 </manifest>
