--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,6 +15,9 @@ junit-vintge = { module = "org.junit.vintage:junit-vintage-engine", version = "5
 gms-location = { module = "com.google.android.gms:play-services-location", version = "21.0.1" }
 chat-gpt-api = { module = "com.cjcrafter:openai", version = "1.3.1" }
 ok-http = { module = "com.squareup.okhttp3:okhttp", version = "4.9.2" }
+recyclerviewx = { module = "androidx.recyclerview:recyclerview", version = "1.3.1" }
+cardviewx = { module = "androidx.cardview:cardview", version = "1.0.0" }
+coordinator-layout = { module = "androidx.coordinatorlayout:coordinatorlayout", version = "1.2.0" }
 
 [bundles]
 mlkit = ["mlkit-translate", "mlkit-language-id"]
