--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
-    id 'com.android.application' version '8.0.1' apply false
+    id 'com.android.application' version '8.0.2' apply false
+    id 'org.jetbrains.kotlin.android' version '1.8.0' apply false
 }
 
 Properties properties = new Properties()
@@ -35,6 +36,7 @@ subprojects {
     }
 
     apply plugin: 'com.android.application'
+
     dependencies {
         implementation libs.api
         coreLibraryDesugaring libs.desugar
