--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
 #base api version
-api = '1.0.10'
+api = '1.0.11'
 
 [libraries]
 api = { module = "com.github.damionx7:Zettel-Notes-Plugin-Api", version.ref = "api" }
@@ -18,7 +18,17 @@ ok-http = { module = "com.squareup.okhttp3:okhttp", version = "4.9.2" }
 recyclerviewx = { module = "androidx.recyclerview:recyclerview", version = "1.3.1" }
 cardviewx = { module = "androidx.cardview:cardview", version = "1.0.0" }
 coordinator-layout = { module = "androidx.coordinatorlayout:coordinatorlayout", version = "1.2.0" }
+# https://developer.android.com/jetpack/androidx/releases/room
+# https://developer.android.com/jetpack/androidx/releases/paging
+room-annotation-processor = { module = "androidx.room:room-compiler", version = "2.5.2" }
+room-paging = { module = "androidx.room:room-paging", version = "2.5.2" }
+room-runtime = { module = "androidx.room:room-runtime", version = "2.5.2" }
+room-testing = { module = "androidx.room:room-testing", version = "2.5.2" }
+paging = { module = "androidx.paging:paging-runtime-ktx", version = "3.2.1" }
+recyclerview = { module = "androidx.recyclerview:recyclerview", version = "1.3.1" }
+gson = { module = "com.google.code.gson:gson", version = "2.10.1" }
 
 [bundles]
 mlkit = ["mlkit-translate", "mlkit-language-id"]
 junit = ["junit-jupiter", "junit-vintge"]
+room = ["room-runtime", "room-paging"]
