--- a/plugin-alarm/src/main/AndroidManifest.xml
+++ b/plugin-alarm/src/main/AndroidManifest.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <uses-permission android:name="permission.zettelnotes.broadcast" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+
     <application
        android:allowBackup="true"
        android:icon="@mipmap/ic_launcher"
@@ -23,6 +26,13 @@
             </intent-filter>
         </activity>
 
+        <receiver
+           android:name=".ScanBroadcastReceiver"
+           android:exported="true">
+            <intent-filter>
+                <action android:name="org.eu.thedoc.zettelnotes.intent.scan.broadcast" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
