--- a/plugin-alarm/src/main/AndroidManifest.xml
+++ b/plugin-alarm/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <uses-permission android:name="permission.zettelnotes.broadcast" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
     <application
@@ -26,13 +26,15 @@
             </intent-filter>
         </activity>
 
-        <receiver
-           android:name=".ScanBroadcastReceiver"
+
+        <service
+           android:name=".DatabaseService"
            android:exported="true">
             <intent-filter>
                 <action android:name="org.eu.thedoc.zettelnotes.intent.scan.broadcast" />
             </intent-filter>
-        </receiver>
+        </service>
+
     </application>
 
 </manifest>
