--- a/plugin-btn-speedread/src/main/AndroidManifest.xml
+++ b/plugin-btn-speedread/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
        android:theme = "@style/Theme.ZettelNotes.NoActionBar">
 
         <activity
-           android:name = ".LauncherActivity"
+           android:name=".MainActivity"
            android:theme="@style/Theme.ZettelNotes"
            android:exported = "true">
             <intent-filter>
@@ -18,7 +18,7 @@
             </intent-filter>
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.INFO" />
             </intent-filter>
         </activity>
 
