--- a/plugin-alarm/src/main/AndroidManifest.xml
+++ b/plugin-alarm/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
     <uses-permission android:name="org.eu.thedoc.zettelnotes.permission.broadcast" />
+    <uses-permission android:name="org.eu.thedoc.zettelnotes.debug.permission.broadcast" />
 
     <application
        android:allowBackup="true"
@@ -36,7 +37,10 @@
            android:name=".screens.DatabaseService"
            android:exported="true">
             <intent-filter>
-                <action android:name="org.eu.thedoc.zettelnotes.broadcast.plugins.scan.alarm" />
+                <action android:name="org.eu.thedoc.zettelnotes.plugins.alarm.SCAN" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="org.eu.thedoc.zettelnotes.plugins.scan.DELETE_URIS" />
             </intent-filter>
         </service>
 
