--- a/settings.gradle
+++ b/settings.gradle
@@ -24,3 +24,4 @@ include ':plugin-btn-translate'
 include ':plugin-btn-speedread'
 include ':plugin-btn-chat-ai'
 include ':plugin-alarm'
+include ':base'
