--- a/plugin-alarm/build.gradle
+++ b/plugin-alarm/build.gradle
@@ -25,4 +25,5 @@ dependencies {
     implementation libs.recyclerview
     implementation libs.bundles.room
     implementation libs.paging
+    implementation libs.material
 }
