--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -23,6 +23,7 @@ room-annotation-processor = { module = "androidx.room:room-compiler", version = 
 room-paging = { module = "androidx.room:room-paging", version = "2.5.2" }
 room-runtime = { module = "androidx.room:room-runtime", version = "2.5.2" }
 room-testing = { module = "androidx.room:room-testing", version = "2.5.2" }
+material = { module = "com.google.android.material:material", version = "1.9.0" }
 paging = { module = "androidx.paging:paging-runtime-ktx", version = "3.2.1" }
 recyclerview = { module = "androidx.recyclerview:recyclerview", version = "1.3.1" }
 gson = { module = "com.google.code.gson:gson", version = "2.10.1" }
