--- a/plugin-btn-todotxt/src/main/AndroidManifest.xml
+++ b/plugin-btn-todotxt/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
 
         <activity
            android:name=".MainActivity"
-           android:theme="@style/Theme.ZettelNotes"
+           android:theme="@style/AppThemeTransparent"
            android:exported="true">
             <intent-filter>
                 <action android:name="org.eu.thedoc.zettelnotes.intent.buttons" />
