--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,5 @@
+import java.time.LocalDate
+
 plugins {
     id 'com.android.application' version '8.1.3' apply false
     id 'com.android.library' version '8.1.3' apply false
@@ -21,7 +23,9 @@ subprojects { subproject ->
     //shared variables
     ext {
         packageName = ''
-        versionMajor = 0
+        versionMajor = LocalDate.now().year
+        versionMinor = LocalDate.now().monthValue
+        versionPatch = LocalDate.now().dayOfMonth
     }
     afterEvaluate {
         if (subproject.plugins.hasPlugin("com.android.application")) {
@@ -45,8 +49,8 @@ subprojects { subproject ->
                     targetSdk project.targetSdk
 
                     applicationId "${subproject.packageName}"
-                    versionCode subproject.versionMajor
-                    versionName "${subproject.versionMajor}"
+                    versionCode versionMajor * 10000 + versionMinor * 100 + versionPatch
+                    versionName "${versionMajor}.${versionMinor}.${versionPatch}"
 
                     signingConfig signingConfigs.config
 
