--- a/plugin-alarm/build.gradle
+++ b/plugin-alarm/build.gradle
@@ -21,7 +21,7 @@ dependencies {
     implementation libs.constraintx
     implementation libs.cardviewx
     implementation libs.gson
-    implementation libs.recyclerview
+    implementation libs.recyclerviewx
     implementation libs.bundles.room
     implementation libs.paging
     implementation libs.material
