--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,9 @@
 import java.time.LocalDate
 
 plugins {
-    id 'com.android.application' version '8.1.3' apply false
-    id 'com.android.library' version '8.1.3' apply false
-    id 'org.jetbrains.kotlin.android' version '1.9.20' apply false
+    alias libs.plugins.android.application apply false
+    alias libs.plugins.android.library apply false
+    alias libs.plugins.jetbrains.kotlin apply false
 }
 
 Properties properties = new Properties()
