--- a/plugin-alarm/build.gradle
+++ b/plugin-alarm/build.gradle
@@ -1,6 +1,6 @@
 plugins {
-    id 'com.android.application'
-    id 'kotlin-android'
+    alias libs.plugins.android.application
+    alias libs.plugins.jetbrains.kotlin
 }
 
 packageName = "org.eu.thedoc.zettelnotes.plugins.alarm"
