--- a/plugin-btn-speech2text/build.gradle
+++ b/plugin-btn-speech2text/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'com.android.application'
+    alias libs.plugins.android.application
 }
 
 packageName = "org.eu.thedoc.zettelnotes.buttons.speech2text"
