chore: unify libs.versions.toml

--- a/plugin-btn-chat-ai/build.gradle
+++ b/plugin-btn-chat-ai/build.gradle
@@ -16,7 +16,7 @@ android {
 
 dependencies {
     implementation libs.chat.gpt.api
-    implementation libs.ok.http
+    implementation libs.okhttp
     implementation libs.cardviewx
     implementation libs.constraintx
     implementation libs.preferencex
