--- a/base/build.gradle
+++ b/base/build.gradle
@@ -4,10 +4,11 @@ plugins {
 
 android {
     namespace 'org.eu.thedoc.zettelnotes.plugins.base'
-    compileSdk 33
+    compileSdk project.compileSdk
 
     defaultConfig {
-        minSdk 21
+        minSdk project.minSdk
+        targetSdk project.targetSdk
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
@@ -31,5 +32,5 @@ android {
 }
 
 dependencies {
-    implementation libs.api
+    api libs.button.api
 }
