feat: doc scanner plugin

--- a/settings.gradle
+++ b/settings.gradle
@@ -21,13 +21,14 @@ dependencyResolutionManagement {
 }
 
 rootProject.name = "Zettel Notes Plugins"
+include ':base'
+include ':plugin-alarm'
+include ':plugin-btn-chat-ai'
 include ':plugin-btn-location'
+include ':plugin-btn-scanner'
 include ':plugin-btn-smile'
+include ':plugin-btn-speech2text'
+include ':plugin-btn-speedread'
 include ':plugin-btn-textutils'
 include ':plugin-btn-todotxt'
-include ':plugin-btn-speech2text'
 include ':plugin-btn-translate'
-include ':plugin-btn-speedread'
-include ':plugin-btn-chat-ai'
-include ':plugin-alarm'
-include ':base'
