--- a/plugin-btn-translate/src/main/AndroidManifest.xml
+++ b/plugin-btn-translate/src/main/AndroidManifest.xml
@@ -2,16 +2,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application
-        android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/Theme.ZettelNotes" >
+       android:allowBackup="true"
+       android:icon="@mipmap/ic_launcher"
+       android:label="@string/app_name"
+       android:roundIcon="@mipmap/ic_launcher_round"
+       android:supportsRtl="true"
+       android:theme="@style/AppTheme">
 
-        <activity android:name=".LauncherActivity"
-            android:theme="@style/Theme.ZettelNotes"
-            android:exported="true">
+        <activity
+           android:name=".LauncherActivity"
+           android:exported="true">
             <intent-filter>
                 <action android:name="org.eu.thedoc.zettelnotes.intent.buttons" />
                 <category android:name="android.intent.category.DEFAULT" />
@@ -19,12 +19,11 @@
         </activity>
 
         <activity
-            android:name=".TranslateActivity"
-            android:excludeFromRecents="true"
-            android:noHistory="true"
-            android:launchMode="singleTask"
-            android:exported="true"
-            android:theme="@style/Theme.ZettelNotes">
+           android:name=".TranslateActivity"
+           android:excludeFromRecents="true"
+           android:noHistory="true"
+           android:launchMode="singleTask"
+           android:exported="true">
             <intent-filter>
                 <action android:name="org.eu.thedoc.zettelnotes.intent.buttons.translate" />
                 <category android:name="android.intent.category.DEFAULT" />
@@ -32,13 +31,13 @@
         </activity>
 
         <activity
-            android:name=".ProcessTextActivity"
-            android:launchMode="singleTop"
-            android:noHistory="true"
-            android:exported="true"
-            android:label="Translate"
-            android:excludeFromRecents="true"
-            android:theme="@style/AppThemeTransparent">
+           android:name=".ProcessTextActivity"
+           android:launchMode="singleTop"
+           android:noHistory="true"
+           android:exported="true"
+           android:label="Translate"
+           android:excludeFromRecents="true"
+           android:theme="@style/AppThemeTransparent">
             <intent-filter>
                 <action android:name="android.intent.action.PROCESS_TEXT" />
                 <category android:name="android.intent.category.DEFAULT" />
