--- a/settings.gradle
+++ b/settings.gradle
@@ -21,7 +21,7 @@ dependencyResolutionManagement {
 }
 
 rootProject.name = "Zettel Notes Plugins"
-include ':base'
+include ':basemodule'
 include ':plugin-alarm'
 include ':plugin-btn-chat-ai'
 include ':plugin-btn-location'
