--- a/plugin-alarm/src/main/AndroidManifest.xml
+++ b/plugin-alarm/src/main/AndroidManifest.xml
@@ -13,11 +13,10 @@
        android:label="@string/app_name"
        android:roundIcon="@mipmap/ic_launcher_round"
        android:supportsRtl="true"
-       android:theme="@style/Theme.ZettelNotes">
+       android:theme="@style/AppTheme">
 
         <activity
            android:name=".screens.MainActivity"
-           android:theme="@style/Theme.ZettelNotes"
            android:exported="true">
             <intent-filter>
                 <action android:name="org.eu.thedoc.zettelnotes.intent.scan" />
