--- a/plugin-btn-chat-ai/src/main/AndroidManifest.xml
+++ b/plugin-btn-chat-ai/src/main/AndroidManifest.xml
@@ -8,13 +8,12 @@
        android:icon="@mipmap/ic_launcher"
        android:roundIcon="@mipmap/ic_launcher_round"
        android:supportsRtl="true"
-       android:theme="@style/Theme.ZettelNotes">
+       android:theme="@style/AppTheme">
 
         <activity
            android:name="org.eu.thedoc.zettelnotes.buttons.chat.ChatActivity"
            android:exported="true"
-           android:launchMode="singleTask"
-           android:theme="@style/Theme.ZettelNotes">
+           android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
