--- a/plugin-btn-location/src/main/AndroidManifest.xml
+++ b/plugin-btn-location/src/main/AndroidManifest.xml
@@ -9,11 +9,11 @@
        android:icon="@mipmap/ic_launcher"
        android:label="@string/app_name"
        android:roundIcon="@mipmap/ic_launcher"
-       android:supportsRtl="true">
+       android:supportsRtl="true"
+       android:theme="@style/AppTheme">
 
         <activity
            android:name=".MainActivity"
-           android:theme="@style/Theme.ZettelNotes"
            android:exported="true">
             <intent-filter>
                 <action android:name="org.eu.thedoc.zettelnotes.intent.buttons" />
