--- a/plugin-btn-scanner/src/main/AndroidManifest.xml
+++ b/plugin-btn-scanner/src/main/AndroidManifest.xml
@@ -7,11 +7,10 @@
        android:label="@string/app_name"
        android:roundIcon="@mipmap/ic_launcher"
        android:supportsRtl="true"
-       android:theme="@style/Theme.ZettelNotes">
+       android:theme="@style/AppTheme">
 
         <activity
            android:name=".MainActivity"
-           android:theme="@style/Theme.ZettelNotes"
            android:exported="true">
             <intent-filter>
                 <action android:name="org.eu.thedoc.zettelnotes.intent.buttons" />
